--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ffmpeg/core": "^0.11.0",
     "@ffmpeg/ffmpeg": "^0.11.4",
-    "canvas": "^2.10.0"
+    "canvas": "^2.10.0",
+    "node-typescript-compiler": "^3.0.0"
   }
 }
